--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -21,8 +21,8 @@
   
   {{!-- GAME PITCH --}}
   <div class="row pitch">
-  <div class="phone-pic col-md-5"><img class="showcaseImage" src="{{{cloudinaryUrl content.showcaseImage width=auto height=350 crop='scale' quality=100}}}"></div>
-    <div class="game-pitch col-md-7">
+  <div class="phone-pic col-md-5 col-xs-12"><img class="showcaseImage" src="{{{cloudinaryUrl content.showcaseImage width=auto height=350 crop='scale' quality=100}}}"></div>
+    <div class="game-pitch col-md-7 col-xs-12">
       <div class="half-1 col-sm-12 col-centered">
         <h4 class="tagline">{{{content.tagline.html}}}</h4>
         <div class="cta-para-one">{{{content.ctaParagraphOne.html}}}</div>
