--- a/public/styles/_core/homepage.scss
+++ b/public/styles/_core/homepage.scss
@@ -4,7 +4,7 @@
 p {
 	font-family: $body-type;
 	color: $type-black;
-	text-justify: distribute;
+	text-justify: inter-word;
 }
 
 h3 {
@@ -31,6 +31,9 @@ h5 {
 		width: 100%;
 		padding: 30px 40px;
 		margin: 0;
+		position: relative;
+		z-index: 2;
+		overflow: auto;
 
 		@media (min-width: 1350px){
 			padding: 35px 95px;
@@ -55,6 +58,10 @@ h5 {
 			background-color: $dark-blue;
 			padding: 30px 70px;
 			border-bottom: solid 20px $light-blue;
+
+			@media(max-width: 400px){
+				padding: 30px 20px;
+			}
 		}
 		&.flow-play{
 			background-color: $white;
@@ -94,7 +101,7 @@ h5 {
 		.whats{
 			font-family: $sub-header-type;
 			font-size: 6em;
-			z-index: 1;
+			z-index: 2;
 			margin-right: 250px;
 			display: inline-block;
 			position: relative;
@@ -103,7 +110,7 @@ h5 {
 		.at-sign{
 			font-family: $at-sign-type;
 			font-size: 7em;
-			z-index: 2;
+			z-index: 3;
 			display: inline-block;
 			margin-top: -45px;
 			position: absolute;
@@ -112,7 +119,7 @@ h5 {
 		.header-stake{
 			font-family: $sub-header-type;
 			font-size: 7em;
-			z-index: 3;
+			z-index: 4;
 			display: inline-block;
 			margin-left: 65px;
 			margin-top: -45px;
@@ -148,17 +155,21 @@ h5 {
 		margin: 0 auto;
 		display: table;
 
-		@media(max-width: 425px){
+		@media(max-width: 600px){
 			height: 175px;
 		}
 	}
 
 	.game-pitch{
 		float: right;
+		@media(max-width: 990px){
+			padding: 0px 90px;
+		}
 		.tagline{
 
 		}
 		.half-1{
+			min-width: 200px;
 			padding-top: 30px;
 			.cta-para-one{
 				text-align: justify;
@@ -173,7 +184,7 @@ h5 {
 			line-height: 80%;
 			list-style-position: inside;
 			position: relative;
-			z-index: 1;
+			z-index: 2;
 
 			li{
 				height: 50px;
@@ -182,9 +193,10 @@ h5 {
 			p{
 				z-index: 2;
 				position: relative;
-				bottom: 56px;
+				bottom: 35px;
 				left: 45px;
 				text-align-last: auto;
+				line-height: 110%;
 			}
 
 			.point-content{
@@ -262,6 +274,8 @@ h5 {
 	.game-flow{
 		text-align: center;
 		padding: 0 10%;
+		position: relative;
+		z-index: 2;
 		.flow-play-header{
 			padding-bottom: 1px;
 			p{
@@ -276,10 +290,60 @@ h5 {
 				text-align-last: center;
 			}
 		}
-		.flow-play-pic{
-
+		.play-pic{
+			display: block;
+			@media(min-width: 1200px){
+				height: 400px;
+				width: auto;
+			}
+			@media(max-width: 900px){
+				height: 250px;
+				width: auto;
+			}
+			@media(max-width: 650px){
+				height: 175px;
+				width: auto;
+			}
+			@media(max-width: 455px){
+				height: 125px;
+				width: auto;
+			}
 		}
 	}
+
+	.game-flow-graphic{
+		position: absolute;
+		height: 325px;
+		top: 175px;
+		z-index: 1;
+		opacity: .75;
+	
+		@media(min-width: 1200px){
+			top: 180px;
+			height: 375px;
+		}
+		@media(max-width: 900px){
+			height: 250px;
+			top: 175px;
+		}
+		@media(max-width: 650px){
+			height: 175px;
+			top: 225px;
+		}
+		@media(max-width: 455px){
+			height: 125px;
+			top: 325px;
+		}
+	}
+
+	.left{
+		left: 0;
+		}
+
+	.right{
+		right: 0;
+	}
+
 	.game-learn{
 		text-align: center;
 		padding: 0 10%;
@@ -310,14 +374,6 @@ h5 {
 		.team-header{
 			color: $white;
 			font-family: $header-type;
-		}
-
-		.left{
-			float: left;
-		}
-
-		.right{
-			float: right;
 		}
 
 		.team{
