--- a/public/styles/_core/homepage.scss
+++ b/public/styles/_core/homepage.scss
@@ -162,6 +162,7 @@ h5 {
 
 	.game-pitch{
 		float: right;
+		padding: 0px 40px;
 		@media(max-width: 990px){
 			padding: 0px 90px;
 		}
@@ -211,6 +212,10 @@ h5 {
 		.feature-text{
 			padding: 15px 30px;
 			text-align: justify;
+
+			@media(max-width: 767px) and (min-width: 650px){
+				padding: 15px 45px;
+			}
 		}
 		.feature-image{
 
