--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -10,6 +10,30 @@ $player-five-logo: url(https://res.cloudinary.com/engagement-lab-home/image/uplo
 // Colors
 $primary-color: #333;
 $logo-color: #00c5c2;
+$action-button: #555555;
+
+
+// Role Card 
+$pumpkin-orange: #ff7800;
+$tangerine: #ff9600;
+
+
+// Player One
+// $player-blue: #35AFD2;
+// $player-blue-tint: #85CFE6;
+// // Player Two
+// $player-green: #3EB7A1;
+// $player-green-tint: #85D3C5;
+// // Player Three 
+// $player-pink: #B84B88;
+// $player-pink-tint: #D493B8;
+// // Player Four
+// $player-red: #B84D3D;
+// $player-red-tint: #D49589;
+// // Player Five
+// $player-purple: #B048E7;
+// $player-purple-tint: #D090EF; 
+
 $color-turquoise: #1EB4BB;
 $color-seafoam: #00D6B4;
 $color-orange: #febb2c;
@@ -31,23 +55,6 @@ $pumpkin-orange: #ff7800;
 $pink-red: #e90048;
 $cerulean: #0098d0;
 $dark-sky-blue: #20b5e6;
-
-// Player One
-// $player-blue: #35AFD2;
-// $player-blue-tint: #85CFE6;
-// // Player Two
-// $player-green: #3EB7A1;
-// $player-green-tint: #85D3C5;
-// // Player Three 
-// $player-pink: #B84B88;
-// $player-pink-tint: #D493B8;
-// // Player Four
-// $player-red: #B84D3D;
-// $player-red-tint: #D49589;
-// // Player Five
-// $player-purple: #B048E7;
-// $player-purple-tint: #D090EF; 
-
 
 // Heights
 $nav-height: 50px;
