--- a/templates/partials/decider/decks.hbs
+++ b/templates/partials/decider/decks.hbs
@@ -23,14 +23,14 @@
             </div>
           </div>
 
-          <h3 class="white flag">Talking Points</h3>
+          <h3 class="white flag">TALKING POINTS</h3>
           {{!-- <ul> --}}
             {{#each questions}}
             <div class="question"><div class="num">{{@index}}</div><div>{{this}}</div></div>
             {{/each}}
           {{!-- </ul> --}}
 
-          <h3 class="white flag sub-header">Sample Stakeholders</h3>
+          <h3 class="white flag sub-header">SAMPLE STAKEHOLDERS</h3>
           <div class="stakeholders">
             {{#each roles}}
               <span class="deck-role">{{title}}</span>
