--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1,3 +1,4 @@
+
 #gameContent {
 	background-color: $color-seafoam;
 	height: 100%;
@@ -139,12 +140,14 @@ input.post-button {
   margin-top: -30px;
 
 	h1 {
-    font-size: 1.6em;
+    font-size: 24px;
 	  width: 100%;
+	  font-family: $aileron;
 	}
 	p {
 		font-size: 12px;
-	  
+	  color: #ebebeb;
+	  font-family: $avenir-reg;
 	}
 }
 
@@ -153,21 +156,21 @@ input.post-button {
 	padding: 0px;
 
 	.access-code {
-		width: 160px;
+		width: 50%;
 	  height: 56px;
 	  font-size: 56px;
 	  color: #0098d0;
 	  border: 1px #ebebeb dashed;
 	  margin: 10px auto;
+	  -webkit-text-stroke: white 1px;
+	  font-family: $aileron;
 	}
 	p {
 		font-size: 16px;
 	}
 }
 
-#access-code {
-	font-size: 56px; 
-}
+
 .ended-container {
 	background-color: white;
 	margin: 0 auto;
@@ -241,7 +244,9 @@ input.post-button {
 	display: none;
 	width: 100%;
   height: 100%;
-  background: $color-orange;
+  background: $pumpkin-orange;
+  border-radius: 5px;
+  border: 3px white solid;
   z-index: 1000;
 }
 
