added in fonts, update role card

--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -6,11 +6,11 @@ $player-three-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upl
 $player-four-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743590/at-stake/playericons/avatar_red.png);
 $player-five-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743594/at-stake/playericons/avatar_orange.png);
 
-
 // Colors
 $primary-color: #333;
 $logo-color: #00c5c2;
 $action-button: #555555;
+$background-color: #00dcba;
 
 
 // Role Card 
