--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -1,9 +1,9 @@
 
 #gameContent {
-	background-color: $color-seafoam;
+	background-color: $background-color;
 	height: 100%;
 	text-align: center;
-	padding: 20px 10px;
+	padding: 8px;
 	color: black;
 
 	// During the gameplay
@@ -18,29 +18,29 @@
 
 	}
 
-	.header {
-		font-size: 24px;
-		text-align: center;
-		margin: 0px;
-	}
-	.subtitle {
-		font-size: 12px;
-		text-align: center;
-		margin: 0px;
-	}
-	.caption {
-		font-size: 12px;
+}
 
-	}
-
-	.white {
-		color: white;
-	}
-
-	.light {
-		line-height: normal;
-	}
-
+.header {
+	font-size: 24px;
+	font-family: $aileron;
+	text-align: center;
+	margin: 0px;
+}
+.subtitle {
+	font-size: 12px;
+	font-family: $avenir-reg;
+	text-align: center;
+	margin: 0px;
+}
+.caption {
+	font-family: $avenir-reg;
+	font-size: 12px;
+}
+.white {
+	color: white;
+}
+.light {
+	line-height: normal;
 }
 
 // Highlight/glow for any block element
@@ -206,6 +206,7 @@ input.post-button {
 #stages-bar {
 	text-align: justify;
   line-height: 0;
+  top: 8px;
 
   &:after {
 	  content: "";
@@ -241,13 +242,62 @@ input.post-button {
 // Player role card
 #role-card {
 	position: absolute;
+	color: white !important;
+	text-align: center; 
+	top: 0px;
 	display: none;
-	width: 100%;
-  height: 100%;
+	width: auto;
+	height: -webkit-calc(100% - 8px);
+  height:    -moz-calc(100% - 8px);
+  height:         calc(100% - 8px);
+  margin: 8px;
+  margin-bottom: 0px;
   background: $pumpkin-orange;
-  border-radius: 5px;
+  border-radius: 20px 20px 0px 0px ;
   border: 3px white solid;
+  border-bottom: 0px;
   z-index: 1000;
+
+  .swipe {
+  	margin-bottom: 20px;
+  }
+  .instruction {
+  	font-size:10px;
+  	font-family: $avenir-reg;
+  }
+  .icon {
+  	margin: 20px;
+  }
+
+  .role-info {
+  	color:white;
+  	background-color: $action-button;
+  	margin: 40px -15px;
+  	padding-bottom: 20px;
+
+  	.title {
+  		font-size: 18px;
+  	}
+  	
+  	p {
+  		text-align: left;
+  		color:white;
+  		display:inline;
+  	}
+  }
+  .agenda_item {
+  	border-radius: 100px;
+  	background-color: $tangerine;
+
+  	.value {
+	  	height: 56px;
+	  	width: 56px;
+	  	background-size: cover;
+	  	background-repeat: no-repeat;
+	  	background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/coin_stroke.png");
+	  }
+  }
+  
 }
 
 #rules {
