--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -45,7 +45,7 @@
             </div>
 
             {{!-- STAGES BAR --}}
-            <section class="col-sm-12" id="stages-bar">
+            <section class="col-sm-12" id="stages-bar" style="display:none;">
 
                 {{!-- <div style="position:absolute; top:50%; height:10em; margin-top:-5em"> --}}
                     <span id="progress"></span>
