--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -182,6 +182,7 @@ socketEvents = function(eventId, eventData) {
         case 'game:next':
 
             sessionStorage.setItem('gameCode', gameCode);
+            $('#stages-bar').show();
 
             // Don't show yet?
             if(waitForNextScreen) {
