--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -190,6 +190,26 @@ var nextPhaseScreen = function() {
     $($('.screen')[0]).remove();
     $($('.screen')[0]).show();
 
+/*    var countdownAnim = new ProgressBar.Circle(
+                  '.timer', 
+                  {
+                      color: '#fff',
+                      duration: 40*1000,
+                      easing: 'easeInOut',
+                      strokeWidth: 6,
+                      trailColor: '#f4f4f4',
+                      trailWidth: 0.8,
+                      fill: '#fff000',
+                      from: { color: '#00c5c2', width: 1 },
+                      to: { color: '#fff', width: 4 },
+                      // Set default step function for all animate calls
+                      step: function(state, circle) {
+                          circle.setText(40);
+                      }
+                  }
+              );
+    countdownAnim.animate(1);*/
+
 }
 
 /*
