animate role card and stages circles add height catch for mobile devices

--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -24,7 +24,14 @@
 		  background-color: #00dcba;
 		  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.25);
 		  border: solid 1px #ebebeb;
+
+		  &.player-grid {
+		  	animation-name: player-login;
+		  	animation-duration: 0.5s;
+		  	animation-fill-mode: forwards;
+		  }
 		}
+		
 		&#decider {
 			background-color: #00dcba;
 
