--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -2,6 +2,7 @@
 #gameContent {
 	background-color: $background-color;
 	height: 100%;
+	// overflow: hidden;
 	text-align: center;
 	padding: 8px;
 	color: black;
@@ -66,6 +67,10 @@
 
 	p {
 		display: inline;
+		color: white;
+    text-transform: uppercase;
+    line-height: 80px;
+
 	}
 
 	&#player-0 {
@@ -91,10 +96,11 @@
 }
 
 #players {
-	height: 344px;
+	height: auto;
   border-radius: 5px;
   box-shadow: 0 0 4px 0 rgba(85, 85, 85, 0.25);
   border: solid 1px #ebebeb;
+
 }
 
 .form {
@@ -114,6 +120,16 @@
 			position: absolute;
 			bottom: 0px;
 			background-color: $color-seafoam;
+		}
+
+		.next-step {
+			background-color: $color-seafoam;
+			color: white;
+			border-radius: 5px;
+		  box-shadow: 0 2px 0 0 rgba(235, 235, 235, 0.75);
+		  border: solid 1px #ebebeb;
+		  width: 112px;
+		  height: 24px;
 		}
 
 		@at-root .form {
@@ -221,8 +237,19 @@ input.post-button {
 	  display: inline-block;
 	  vertical-align:middle;
 		z-index: 1;
+		
+
 		&.disabled {
 			@include filter(grayscale, 100%);
+			animation-name: exit-stage;
+			animation-duration: 1s;
+			animation-fill-mode: forwards;
+
+		}
+		&:not(.disabled) {
+			animation-name: enter-stage;
+			animation-duration: 1s;
+			animation-fill-mode: forwards;
 		}
 	}
 	#progress {
@@ -245,7 +272,6 @@ input.post-button {
 	position: absolute;
 	color: white !important;
 	text-align: center; 
-	top: 0px;
 	display: none;
 	width: auto;
 	height: -webkit-calc(100% - 8px);
@@ -258,6 +284,19 @@ input.post-button {
   border: 3px white solid;
   border-bottom: 0px;
   z-index: 1000;
+
+  &.open {
+  	display: block;
+  	animation-name: open-role-card;
+  	animation-duration: 1s;
+  	animation-fill-mode: forwards;
+  }
+  &.closed {
+  	display:block;
+  	animation-name: close-role-card;
+  	animation-duration: 1s;
+  	animation-fill-mode: forwards;
+  }
 
   .swipe {
   	margin-bottom: 20px;
@@ -286,16 +325,25 @@ input.post-button {
   		display:inline;
   	}
   }
-  .agenda_item {
+  .agenda-item {
   	border-radius: 100px;
   	background-color: $tangerine;
+  	margin: 10px;
 
   	.value {
 	  	height: 56px;
 	  	width: 56px;
+	  	line-height: 56px;
+	  	display: inline-block;
+	  	float: left;
 	  	background-size: cover;
 	  	background-repeat: no-repeat;
 	  	background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/coin_stroke.png");
+	  }
+	  .agenda {
+	  	height: 56px;
+	  	line-height:56px;
+	  	display:inline-block;
 	  }
   }
   
