--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -1,12 +1,12 @@
-<div class="swipe">
+<div id="btn-close-role-card" class="swipe">
 	<div class="caption">Swipe down to close</div>
-<button id="btn-close-role-card">close</button>
+	<img src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1488901139/at-stake/swipe-down-chevron.svg">
 </div>
 <h1 class="header">Character Role</h1>
 <span class="instruction">This is the role you are playing this round. Your proposal should reflect your character’s perspective. What is at stake for this person?</span>
 
 <div class="role-info">
-	<img class="icon" />
+	<img class="icon"/>
 
 	<h2 class="title">{{title}}</h2>
 	<div class="description">"{{{bio.html}}}"</div>
@@ -15,6 +15,5 @@
 <h1 class="header">Hidden Agenda Items</h1>
 <span class="instruction">At the end of the round, you recieve bonus tokens if the decider believes that  your hidden agenda item is included in the chosen winning proposal.</span>
 
-<div class="agenda-item"><span class="value">100</span>{{agendaItems.[0]}}</div>
-<div class="agenda-item"><span class="value">200</span>{{agendaItems.[1]}}</div>
-
+<div class="agenda-item"><span class="value">100</span><div class="agenda">{{agendaItems.[0]}}</div></div>
+<div class="agenda-item"><span class="value">200</span><div class="agenda">{{agendaItems.[1]}}</div></div>
