--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -273,9 +273,6 @@ socketEvents = function(eventId, eventData) {
                 clockInterval = setInterval(function() {
 
                     function clockTick() {
-                        {{!-- clockHand.css({
-                            transform:'rotateZ('+ -(timeFactor*secondsLeft) + 'deg)'
-                        }); --}}
                         $('#countdown').text(secondsLeft + ' seconds');
                         secondsLeft--;
                     }
@@ -285,6 +282,30 @@ socketEvents = function(eventId, eventData) {
                     if(secondsLeft === 0)
                         clearInterval(clockInterval);
                 }, 1000);
+
+                var hasTimer = $($('.screen')[0]).find('.timer').length > 0;
+
+                if(hasTimer) {
+                    var countdownAnim = new ProgressBar.Circle(
+                      '.screen .timer', 
+                      {
+                          color: '#fff',
+                          duration: secondsLeft*1000,
+                          easing: 'easeInOut',
+                          strokeWidth: 6,
+                          trailColor: '#999',
+                          trailWidth: 0.8,
+                          fill: '#555',
+                          from: { color: '#999', width: 4 },
+                          to: { color: '#999', width: 4 },
+                          // Set default step function for all animate calls
+                          step: function(state, circle) {
+                              circle.setText(secondsLeft);
+                          }
+                      }
+                    );
+                    countdownAnim.animate(1);
+                }
 
             break;
 
