updating mockups, adding variables, finalize colors

--- a/public/styles/_core/animations.scss
+++ b/public/styles/_core/animations.scss
@@ -1,7 +1,11 @@
 // Lobby 
 @keyframes player-login {
-    from {bottom: 20px;}
-    to {bottom: 100px;}
+    from {
+    	bottom: 20px;
+    }
+    to {
+    	bottom: 100px;
+    }
 }
 
 
