--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -120,11 +120,11 @@
 
                 <footer id="bottom-bar" style="display:none">
                 
-                    <div class="col-sm-3">
+                    <div class="col-sm-6 col-xs-6">
                         <button id="btn-role-card">role card</button>
                         <button id="btn-menu">menu</button>
                     </div>
-                        <div id="currency" class="col-sm-3">
+                        <div id="currency" class="col-sm-6 col-xs-6">
                             <div id="player-coins">[coins] <span></span></div>
                             <div id="pot-coins">[pot] <span></span></div>
                         </div>
