--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -12,20 +12,40 @@
 		}
 	}
 
+	p {
+		color: white;
+	}
+
+	.game_login {
+		display: block;
+			position: fixed;
+			right: 0;
+			margin-bottom: 10px;
+			color: $turquoise-light;
+			width: 96px;
+			padding: 0px;
+			min-width: 0px;
+		  min-height: 0px;
+		  border-radius: 0px;
+		  background-color: transparent;
+		  border: 0px;
+		  font-weight: 800;
+		  font-size: 20px;
+	}
+
 	// Lobby game screens
 	.lobby {
 		&:not(#decider) {
 			width: 90%;
-		  height: 370px;
+		  height: 70%;
 		  position: fixed;
-		  bottom: 20px;
+		  bottom: 0px;
 		  left: 5%;
-		  border-radius: 5px;
-		  background-color: #00dcba;
-		  box-shadow: 0 2px 3px 1px rgba(0, 0, 0, 0.25);
-		  border: solid 1px #ebebeb;
+		  
 
 		  &.player-grid {
+		  	width:100% !important;
+		  	left:0px !important;
 		  	animation-name: player-login;
 		  	animation-duration: 0.5s;
 		  	animation-fill-mode: forwards;
@@ -33,12 +53,16 @@
 		}
 		
 		&#decider {
-			background-color: #00dcba;
-
 			.waiting {
 				width: 90%;
 				margin: 5% auto;
 			}
+		}
+
+		#start {
+			position:fixed;
+			bottom: 0px;
+			width: 100%
 		}
 
 		// Show back button on login screen
@@ -47,34 +71,34 @@
 			position: fixed;
 			left: 0;
 			bottom: 0;
-			margin: 30px;
-			color: white;
+			margin-bottom: 10px;
+			color: $turquoise-light;
 			width: 96px;
 			min-width: 0px;
 		  height: 24px;
 		  min-height: 0px;
-		  border-radius: 5px;
+		  border-radius: 0px;
 		  background-color: transparent;
-		  box-shadow: 0 2px 0 0 rgba(235, 235, 235, 0.75);
-		  border: solid 1px #ebebeb;
+		  border: 0px;
 		}
 
 		#btn-start-game {
-			position: absolute;
-			right: 0;
-			bottom: 0;
-			margin: 10px;
-			color: white;
-			// width: 96px;
-		 //  height: 24px;
-		  border-radius: 5px;
-		  background-color: gray;
-		  box-shadow: 0 2px 0 0 rgba(235, 235, 235, 0.75);
-		  border: solid 1px #ebebeb;			
+			width: auto;
+			white-space: normal;
+			color: $turquoise-light;
+			border: 0px;
+			border-radius:0px;
+			height:auto;
+			padding:0px;
+			margin: 0 auto;
+			margin-bottom: 10px;		
+			background-color: transparent;
+			font-weight: 800;
+
 		}
 
 		.username {
-			// margin-bottom: 40px;
+			margin-bottom: 40px;
 			h2 {
 				font-size: 24px;
 			}
@@ -86,32 +110,42 @@
 
 		&#choices {
 			.btn {
-				width:272px;
+				width: 80%;
 				white-space: normal;
 				color: white;
-				border: 1px #ebebeb solid;
-				box-shadow: 0 2px 0 0 rgba(235, 235, 235, 0.75);
+				border: 0px;
+				border-radius:0px;
 				height:48px;
 				padding:0px;
+				margin: 0 auto;
 				margin-bottom: 10px;
 
 				h2 {
-					font-size: 24px;
+					font-size: 20px;
 					line-height: 48px;
 					margin:0px;
+					margin-bottom: 10px;
 				}
 
 				&#btn_new_game {
-					background-color:red;
+					background: -moz-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* FF3.6-15 */
+					background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* Chrome10-25,Safari5.1-6 */
+					background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+					
 				}
 
 				&#btn_join_game {
-					background-color:blue;
+					background: -moz-linear-gradient(top, $blue-light 90%, $blue-dark 10%); /* FF3.6-15 */
+					background: -webkit-linear-gradient(top, $blue-light 90%, $blue-dark 10%); /* Chrome10-25,Safari5.1-6 */
+					background: linear-gradient(to bottom, $blue-light 90%, $blue-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+					
 				}
 			}
 			.btn_cap {
 				width: 90%;
-				margin: 5% auto;
+				margin: 15% auto;
+				margin-top: 0px;
+				font-size: 10px;
 			}
 		}
 
@@ -121,11 +155,11 @@
 	#login-header {
 
 		padding-top:0px;
-		margin-top: -30px;
+		height:30%;
 
 		img {
 			// height: 136px;
-			width: 287px;
+			width: 200px;
 			padding: 10px;
 			margin-top: 16px;
 		}
@@ -141,119 +175,147 @@
 
 	// Name entry
 	#name.lobby {
+
 		.form {
 			padding: 8px;
+	    position: absolute;
+	    top: 10px;
+	    z-index: 1000;
 		}
 		p {
 			font-size: 12px;
 		}
 		#player-name {
-			height: 48px;
+			height: 60px;
+			width: 95%;
+			margin: 0 auto;
+			font-size: 12px;
 			// line-height: 48px;
-		  border-radius: 2px;
-		  background-color: #d8d8d8;
-		  box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.2);
-		  border: solid 1px #949494;
+		  border-radius: 0px;
+		  background-color: $color-white;
+		  // box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.2);
+		  border: 0px;
+		  border-top: 3px solid lighten($color-grey, 30%);
 		  margin: 0px;
 		  margin-bottom: 5px;
-			&::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+
+			&::-webkit-input-placeholder{ 
 			  font-size:14px;
-			  text-align: center;
 			  height: 48px;
-			  line-height: 1.13em;
-			}
-			&::-moz-placeholder { /* Firefox 19+ */
-			  font-size: 14px;
 			  text-align: center;
-			  height: 48px;
-			  line-height: 1.13em;
+			  line-height: 48px !important;
 			}
-			&:-ms-input-placeholder { /* IE 10+ */
-			  font-size: 14px;
+			&::-moz-placeholder{
+				font-size:14px;
+			  height: 48px;
 			  text-align: center;
-			  height: 48px;
-			  line-height: 1.13em;
+			  line-height: 48px !important;
+
 			}
-			&:-moz-placeholder { /* Firefox 18- */
-			  font-size: 14px;
+			&:-ms-input-placeholder {
+				font-size:14px;
+			  height: 48px;
 			  text-align: center;
-			  height: 48px;
-			  line-height: 1.13em;
+			  line-height: 48px !important;
+
 			}
+			&:-moz-placeholder {
+				font-size:14px;
+			  height: 48px;
+			  text-align: center;
+			  line-height: 48px !important;
+
+			}
+			
+		}
+
+		.login-footer {
+			position: absolute;
+			bottom: 0px;
+			// background-color: $turquoise-dark;
+			margin-left: -30px;
+			margin-right:-30px;
+			padding:30px;
+			height: 70%;
 		}
 
 		#description p {
-			font-size: 10px;
-			bottom: 0px;
+			font-size: 12px;
 			width:98%;
-			color: #555555;
+			color: $color-white;
 			margin: 1% auto;
 			text-align: center;
-			
+			margin-top:30px;
 		}
 		#btn_submit_name {
-			background-color:red;
+			background: -moz-linear-gradient(top, $pink-light 90%, $pink-dark 10%); /* FF3.6-15 */
+			background: -webkit-linear-gradient(top, $pink-light 90%, $pink-dark 10%); /* Chrome10-25,Safari5.1-6 */
+			background: linear-gradient(to bottom, $pink-light 90%, $pink-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			color: white;
 			border: 0px;
+			border-radius: 0px;
 			height:48px;
 			width: 160px;
 			padding:0px;
 			font-size: 24px;
-			margin-bottom: 100px;
-			border: 0.5px solid white;
+			margin-bottom: 10%;
+			margin-top: 5%;
 		}
 	}
 
 	#join.lobby {
 
 		#access_code {
-			height: 48px;
+			height: 60px;
 			width: 95%;
-			margin: 2.5%;
-		  border-radius: 2px;
-		  background-color: #d8d8d8;
-		  box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.2);
-		  border: solid 1px #949494;
-		  -webkit-text-stroke: 1px #ebebeb;
+			margin: 0 auto;
+			font-size: 12px;
+		  border-radius: 0px;
+		  background-color: $color-white;
+		  border: 0px;
+		  border-top: 3px solid lighten($color-grey, 30%);
+		  margin: 0px;
 
 		  &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 			  font-size:14px;
-			  text-align: center;
 			  height: 48px;
-			  padding:0px;
-			  line-height: 14px;
+			  text-align: center;
+			  line-height: 48px !important;
 			}
 			&::-moz-placeholder { /* Firefox 19+ */
-			  font-size: 14px;
-			  text-align: center;
+			  font-size:14px;
 			  height: 48px;
-			  line-height: 1.13em;
+			  text-align: center;
+			  line-height: 48px !important;
 			}
 			&:-ms-input-placeholder { /* IE 10+ */
-			  font-size: 14px;
-			  text-align: center;
+			  font-size:14px;
 			  height: 48px;
-			  line-height: 1.13em;
+			  text-align: center;
+			  line-height: 48px !important;
 			}
 			&:-moz-placeholder { /* Firefox 18- */
-			  font-size: 14px;
-			  text-align: center;
+			  font-size:14px;
 			  height: 48px;
-			  line-height: 1.13em;
+			  text-align: center;
+			  line-height: 48px !important;
 			}
 		}
 
 		#btn_submit_code {
-			background-color:red;
+			width: 80%;
+			white-space: normal;
 			color: white;
 			border: 0px;
+			border-radius:0px;
 			height:48px;
-			width: 160px;
 			padding:0px;
-			font-size: 24px;
-			margin-bottom: 100px;
-			border: 0.5px solid white;
-			position:relative;
+			margin: 0 auto;
+			margin-bottom: 10px;
+			background: -moz-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* FF3.6-15 */
+			background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%); /* Chrome10-25,Safari5.1-6 */
+			background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+			position: relative;
 		}
 
 
@@ -266,15 +328,21 @@
 			color: white;
 		}
 
+		.form-prompt {
+			font-size: 12px;
+		}
+
 		#decks {
 			width: 100%;
 			visibility: hidden;
-			margin-top: 10%;
+			margin-top: 5%;
 
 			button {
 				color: $color-turquoise;
 				margin: 5px 5px;
-				padding: 5px;
+				padding: 2px;
+				height: 5px;
+				width: 5px;
 			}
 
 			.glide__bullets {
@@ -288,49 +356,30 @@
 			    color: black;
 			    margin: 1%;
 			    display: inline-block;
-			    background-color: #d8d8d8;
-			    box-shadow: 0 2px 4px 0 rgba(85, 85, 85, 0.25);
-			    border-radius: 5px;
+			    background-color: white;
+			    // box-shadow: 0 2px 4px 0 rgba(85, 85, 85, 0.25);
+			    border-radius: 0px;
 			    height:100%;
 
 					.deck-header {
-						background-color: $color-seafoam;
+						background-color: $orange-dark;
 						padding: 10px 0px;
+						color: white;
 					}
 
 					.flag {
-						background-color: #949494;
-						box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
-					  border: solid 1px #ebebeb;
+						color:$orange-dark;
 					  margin: 4px;
+					  font-size: 20px;
 					}
 
 					.question {
-						height: 40px;
+						height: auto;
 						margin: 4px;
-					  border-radius: 20px;
-					  background-color: #00c2a9;
-					  border: solid 1px #ebebeb;
-					  text-align: left;
-					  color: white;
+					  text-align: center;
+					  color: black;
+				  	line-height: 16px;
 
-					  :not(.num) {
-					  	margin: 2px 12px 2px 44px;
-					  	line-height: 16px;
-					  }
-					  
-					  .num {
-					  	width: 40px;
-						  height: 40px;
-						  border-radius: 19px;
-						  background-color: #00dcba;
-						  border: solid 1px #ebebeb;
-						  float: left;
-						  font-size: 24px; 
-						  line-height: 24px;
-						  padding: 8px;
-						  text-align: center;
-					  }
 					}
 
 					.stakeholders {
@@ -340,13 +389,9 @@
 					}
 
 					.deck-role {
-						height: 24px;
-					  border-radius: 100px;
-					  background-color: #00c2a9;
-					  border: solid 1px #ffffff;
 					  display: block;
 					  font-size: 12px;
-				    color: white;
+				    color: $orange-light;
 				    padding: 4px;
 				    margin: 4px;
 
@@ -361,6 +406,107 @@
 			}
 		}
 	}
+
+	// Share code screen
+	#share_code {
+		text-align: center;
+	  color: #ebebeb;
+	  margin-top: -30px;
+
+		h1:not(.access-code) {
+	    font-size: 24px;
+	    margin: 0px;
+	    margin-bottom: 20px;
+		  width: 100%;
+		  font-family: $aileron;
+		}
+		p {
+			font-size: 12px;
+		  color: #ebebeb;
+		  font-family: $avenir-reg;
+		}
+	}
+
+	.waiting {
+		width: 100%;
+		padding: 0px;
+
+		.access-code {
+			max-width: 70%;
+		  height: auto;
+		  font-size: 56px !important;
+		  padding: 5px;
+		  color: #0098d0;
+		  border: 4px solid $turquoise-light;
+		  background-color: lighten($turquoise-dark, 3%);
+		  margin: 10px auto;
+		  font-family: $aileron;
+		}
+		p {
+			font-size: 16px;
+		}
+	}
+
+
+	// Players
+	.player-logo {
+
+		height: 60px;
+		width: 70%;
+		display: inline-block;
+		padding: 0px;
+	  background-repeat: no-repeat;
+		background-size: contain;
+		color: $grey-dark;
+
+		p {
+			display: inline;
+			color: $grey-dark;
+	    text-transform: uppercase;
+	    line-height: 60px;
+	    padding-left: 60px;
+		}
+
+		&#player-0 {
+			background-image : $player-one-logo;
+	    background-position: 40px 10px;
+	    background-size: 40px 40px;
+		}
+		&#player-1 {
+			background-image : $player-two-logo;
+			background-position: 40px 10px;
+	    background-size: 40px 40px;
+		}
+		&#player-2 {
+			background-image : $player-three-logo;
+			background-position: 40px 10px;
+	    background-size: 40px 40px;
+		}
+		&#player-3 {
+			background-image : $player-four-logo;
+			background-position: 40px 10px;
+	    background-size: 40px 40px;
+		}
+		&#player-4 {
+			background-image : $player-five-logo;
+			background-position: 40px 10px;
+	    background-size: 40px 40px;
+		}
+	}
+	#players {
+		height: auto;
+	}
+	.player-grid {
+		background-color: white;
+		max-height: 60%;
+    min-height: 50%;
+    width: 100%;
+    left: 0px;
+		position: absolute;
+		bottom: 10%;
+	  border-top: solid 4px $turquoise-dark;
+	}
+
 
 	// If not on login screen, hide the back button
 	&:not(.lobby) {
