--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -6,33 +6,55 @@ $player-three-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upl
 $player-four-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743590/at-stake/playericons/avatar_red.png);
 $player-five-logo: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743594/at-stake/playericons/avatar_orange.png);
 
-// Colors
-$primary-color: #333;
+/* COLORS */
+
+// Turquoise
+$color-turquoise: #00dcba; // Background color
+$turquoise-dark: #00c2a9; 
+$turquoise-light: #61f5de;
+
+// Blue
+$color-blue: #20b5e6;
+$blue-dark: #0098d0;
+$blue-light: #56d5ff;
+
+// Red
+$color-red: #ff4700;
+$red-dark: #ff3000;
+$red-light: #ff8c53;
+
+// Orange
+$color-orange: #ff9600;
+$orange-dark: #ff7800;
+$orange-light: #ffbe0f;
+
+// Pink 
+$color-pink: #ff115a;
+$pink-dark: #e90048;
+$pink-light: #ff3d6b;
+
+// Grey
+$color-grey: #555555;
+$grey-dark: #949494;
+$color-white: #ebebeb;
+
+// Game
 $logo-color: #00c5c2;
 $action-button: #555555;
-$background-color: #00dcba;
-
+$background-color: $color-turquoise;
 
 // Role Card 
-$pumpkin-orange: #ff7800;
+$pumpkin-orange: ;
 $tangerine: #ff9600;
 
+// Heights
+$nav-height: 50px;
+$nav-height-thin: 25px;
 
-// Player One
-// $player-blue: #35AFD2;
-// $player-blue-tint: #85CFE6;
-// // Player Two
-// $player-green: #3EB7A1;
-// $player-green-tint: #85D3C5;
-// // Player Three 
-// $player-pink: #B84B88;
-// $player-pink-tint: #D493B8;
-// // Player Four
-// $player-red: #B84D3D;
-// $player-red-tint: #D49589;
-// // Player Five
-// $player-purple: #B048E7;
-// $player-purple-tint: #D090EF; 
+
+
+
+/* HOMEPAGE */
 
 $color-turquoise: #1EB4BB;
 $color-seafoam: #00D6B4;
@@ -56,6 +78,3 @@ $pink-red: #e90048;
 $cerulean: #0098d0;
 $dark-sky-blue: #20b5e6;
 
-// Heights
-$nav-height: 50px;
-$nav-height-thin: 25px;
