GameLogic cleanup and fixes for new phase/sub-screen layouts, added logic for advancing player screen when decider moves forward, first pass for speech bubble styling.

--- a/templates/partials/component/timer.hbs
+++ b/templates/partials/component/timer.hbs
@@ -12,8 +12,8 @@
   {{!-- CIRCULAR TIMER --}}
   <div class="timer"></div>
   <div class="form row">
-    <button id="btn-next" data-event="game:next" class="timer-button next-step submit">next</button>
-    <span id="modifier" class="hidden-el" data-hide_next="true"></span>
+    <button id="btn-next" data-event="game:next_screen" class="timer-button next-step submit" style="display:none">next</button>
+    <span id="modifier" class="hidden-el" data-hide_next="false"></span>
   </div>
 
 {{/if}}
