--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -366,50 +366,38 @@ input.post-button {
 }
 
 // Speech bubbles
-.speech {
+blockquote.speech {
     position: relative;
     padding: 50px 15px;
     margin: 1em 0 3em;
-    border: 10px solid #5a8f00;
     text-align: center;
-    color: #333;
-    background: #fff;
+    color: white;
+    background: $dark-sky-blue;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
     &:before {
 	    content: "";
-	    position: absolute;
+			position: absolute;
 	    z-index: 10;
-	    bottom: -40px;
-	    left: 50px;
-	    width: 50px;
-	    height: 30px;
-	    border-style: solid;
-	    border-width: 0 10px 10px 0;
-	    border-color: #5a8f00;
-	    background: transparent;
-	    -webkit-border-bottom-right-radius: 80px 50px;
-	    -moz-border-radius-bottomright: 80px 50px;
-	    border-bottom-right-radius: 80px 50px;
-	    display: block;
+	    bottom: -25px;
+	    left: 190px;
+			width: 0;
+			height: 0;
+			border-left: 25px solid transparent;
+	    border-top: 26px solid $dark-sky-blue;
+	    border-right: 25px solid transparent;
     }
-    &:after {
-      content: "";
-	    position: absolute;
-	    z-index: 10;
-	    bottom: -40px;
-	    left: 50px;
-	    width: 20px;
-	    height: 30px;
-	    border-style: solid;
-	    border-width: 0 10px 10px 0;
-	    border-color: #5a8f00;
-	    background: transparent;
-	    -webkit-border-bottom-right-radius: 40px 50px;
-	    -moz-border-radius-bottomright: 40px 50px;
-	    border-bottom-right-radius: 40px 50px;
-	    display: block;
+
+    // Duplicate for coloration on bottom
+    .under {
+    	position: absolute;
+	    top: -13px;
+	    left: 0;
+    	background: $color-seafoam;
+	    z-index: -1;
+	    border-radius: 15px;
+	    border-left: none;
     }
 }
 
