--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -75,6 +75,8 @@
 		'game:tutorial',
 		'game:start',
 		'game:next',
+		'game:next_phase',
+		'game:next_screen',
 		'game:next_round',
 		'game:next_item',
 		'game:ending',
@@ -227,7 +229,7 @@
 
 			if(modifier.data().hide_next) 
 		 		$('#btn-next').fadeOut();
-		 	else
+		 	else if(!isDecider)
 		 		$('#btn-next').fadeIn();
 			
 			if(modifier.data().highlight) 
@@ -410,8 +412,6 @@ window.onload = function() {
 					let gameHeight = $(window).height();
 					$('#wrapper').height(gameHeight);
 					$('body, html').css('overflow', 'hidden');
-				{{else}}				
-					console.log("youre not playing the game silly");
 				{{/ifnoteq}}
 
 			}
@@ -452,8 +452,6 @@ window.onload = function() {
 
 			// PLAYER LOGIC
 			{{> script/player_logic section=section}}
-
-			
 
 		  $('#decider #btn_submit').click(function(evt) {
 				var data = {};
