--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -99,8 +99,6 @@ socketEvents = function(eventId, eventData) {
             playerWasReconnected = false;
 
             $('#debug-info').text('Player id: ' + eventData.id);
-            
-            console.log (eventData.id + " is the player ID");
 
             playerId = eventData.id;
 
@@ -112,7 +110,6 @@ socketEvents = function(eventId, eventData) {
 
             // Set local player state as reconnected
             playerWasReconnected = true;
-            
 
             break;
 
@@ -187,11 +184,25 @@ socketEvents = function(eventId, eventData) {
             break;
 
         case 'game:start':
-        case 'game:next':
 
-        {{!-- if (!($('#stages-bar'))) { --}}
-        $('#stages-bar').show();
-        {{!-- } --}}
+        case 'game:next_item':
+
+            $('#agenda-items .role:visible').remove();
+            $('#agenda-items .role').first().show();
+
+            break;
+
+        case 'game:next_screen':
+
+            // Only occurs for non-decider, since decider sends this
+            if(!isDecider)
+                nextPhaseScreen();
+
+            break;
+
+        case 'game:next_phase':
+
+            $('#stages-bar').show();
 
             sessionStorage.setItem('gameCode', gameCode);
             $('#stages-bar').show();
@@ -222,10 +233,13 @@ socketEvents = function(eventId, eventData) {
                 else if ($('#gameContent').hasClass('player-grid'))
                     $('#gameContent').removeClass('player-grid');
 
-                // Add 'game:next' trigger to next buttons
-                $('#next').data('event', 'game:next');
+                // Add trigger to go to next step on next-step buttons
                 $('.next-step').click(function(evt) {
                     nextPhaseScreen();
+                });
+
+                _.each($('.screen blockquote.speech'), function(el, i) {
+                    $(el).clone().addClass('under').appendTo(el);
                 });
 
                 // Show initial
@@ -290,9 +304,9 @@ socketEvents = function(eventId, eventData) {
                         clearInterval(clockInterval);
                 }, 1000);
 
-                var hasTimer = $($('.screen')[0]).find('.timer').length > 0;
+                // var hasTimer = $($('.screen')[0]).find('.timer').length > 0;
 
-                if(hasTimer) {
+                // if(hasTimer) {
                     var countdownAnim = new ProgressBar.Circle(
                       '.screen .timer', 
                       {
@@ -312,7 +326,7 @@ socketEvents = function(eventId, eventData) {
                       }
                     );
                     countdownAnim.animate(1);
-                }
+                // }
 
             break;
 
@@ -335,8 +349,11 @@ socketEvents = function(eventId, eventData) {
 
             runMods();
             
-            $('#more-time,#btn-next').fadeIn();
+            $('#more-time').fadeIn();
             $('#btn-more-time,#btn-cancel').click(function() { $('#more-time').fadeOut()} );
+
+            if(isDecider)
+                $('#btn-next').show();
 
             break;
 
@@ -358,20 +375,9 @@ socketEvents = function(eventId, eventData) {
 
             break;
 
-        case 'game:next_item':
-
-            $('#agenda-items .role:visible').remove();
-            $('#agenda-items .role').first().show();
-
-            break;
-
         case 'game:decider':
 
             isDecider = eventData;
-
-            // Hide decider controls if no longer decdier
-            if(!isDecider)
-                $('#decider-controls').hide();
 
             break;
 
