--- a/templates/partials/shared/meet.hbs
+++ b/templates/partials/shared/meet.hbs
@@ -1,6 +1,7 @@
 {{!-- MEET PHASE UI --}}
 <div id="meet">
 
+	{{!-- ROLE CARDS --}}
 	<div class="screen initial">
 		
 		<section class="instruction decider">
@@ -11,39 +12,17 @@
 		<section class="instruction player">
 			<h1>Open your Role Card and review your role</h1>
 			<div>Press the Role Card buton on the bottom of the screen to review your title and bio.</div>
-		</section>
-
-		<blockquote class="speech decider form">
-        <p>"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."</p>
-			<button class="next-step submit">next</button>
-    </blockquote>
-		<blockquote class="speech player">
-			<p>"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."</p>
-		</blockquote>
-
-	</div>
-
-	{{!-- ROLE CARDS --}}
-	<div class="screen">
-		
-		<section class="instruction decider">
-			<h1>read the text in the blue box outloud</h1>
-			<div>Once you have finished speaking the instructions to other players, press next to continue</div>
-		</section>
-		<section class="instruction player">
-			<h1>Open your Role Card and review your role</h1>
-			<div>Press the Role Card buton on the bottom of the screen to review your title and bio.</div>
 			{{!-- 'Modifier' data tag modifies script behavior --}}
    		<span id="modifier" class="hidden-el" data-highlight="#btn-role-card"></span>
 		</section>
 
-		<div class="speech decider form">
-			"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."
-			<button class="next-step submit">next</button>
-		</div>
-		<div class="speech player">
-			"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."
-		</div>
+		<blockquote class="speech decider form">
+        <p>"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."</p>
+			<button class="next-step submit" data-event="game:next_screen">next</button>
+    </blockquote>
+		<blockquote class="speech player">
+			<p>"Everyone open your role card using the button at the bottom of your screen and review your character role. You will be playing from this character's perspective this round."</p>
+		</blockquote>
 
 	</div>
 
@@ -59,13 +38,13 @@
 			<div>On your turn, read your character role title and bio outloud to the group.</div>
 		</section>
 
-		<div class="speech decider form">
+		<blockquote class="speech decider form">
 			"One at a time, go around the table introducing yourself by reading your character role title and short bio. Do not read your hidden agenda items outloud!"
-			<button class="next-step submit">next</button>
-		</div>
-		<div class="speech player">
+			<button class="next-step submit" data-event="game:next_screen">next</button>
+		</blockquote>
+		<blockquote class="speech player">
 			"One at a time, go around the table introducing yourself by reading your character role title and short bio. Do not read your hidden agenda items outloud!"
-		</div>
+		</blockquote>
 
 	</div>
 
@@ -81,13 +60,13 @@
 			<div>At the bottom of your role card are your hidden agenda items. Secretly review them now.</div>
 		</section>
 
-		<div class="speech decider form">
+		<blockquote class="speech decider form">
 			"Now everyone quietly review your hidden agenda items at the bottom of your role card. You’ll earn coins if they are included in the winning proposal. Keep them secret!"
-			<button id="next" class="submit">next</button>
-		</div>
-		<div class="speech player">
+			<button id="next" class="submit" data-event="game:next">next</button>
+		</blockquote>
+		<blockquote class="speech player">
 			"Now everyone quietly review your hidden agenda items at the bottom of your role card. You’ll earn coins if they are included in the winning proposal. Keep them secret!"
-		</div>
+		</blockquote>
 
 	</div>
 
